fix: avoid doubled line breaks in post view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,7 +396,6 @@ body {
 
 .post-content p {
   margin: 0 0 1.1em;
-  white-space: pre-line;
 }
 
 .post-content h2,
